# BoardLib

./: .gitignore  LICENSE  README.md  aurora_api.py  pyproject.toml  requirements.txt
board_lib/api/: moon.py
src/boardlib/: __main__.py
src/boardlib/api/: aurora.py  moon.py
src/boardlib/db/: aurora.py
src/boardlib/util/: grades.py  images.py
tests/boardlib/api/: requests_mocks.py  test_aurora.py  test_moon.py
